crates/easyofd/tests/compile_fail/derive_enum.rs
use easyofd::OfdModel;

#[derive(OfdModel)]
enum NotAStruct {
    Variant,
}

fn main() {}
