crates/easyofd/tests/compile_fail/derive_enum.stderr
error: OfdModel can only be derived for structs
 --> tests/compile_fail/derive_enum.rs:4:1
  |
4 | / enum NotAStruct {
5 | |     Variant,
6 | | }
  | |_^
